import org.asciidoctor.gradle.jvm.AsciidoctorTask

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.9'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.google.protobuf' version '0.9.4'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = 'com.exit'
version = '0.0.1-SNAPSHOT'
description = 'gateway'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

def profile = project.findProperty('profile') ?: 'dev'
def isProd = profile == 'prod'

configurations {
    compileOnly { extendsFrom annotationProcessor }
    asciidoctorExt
}

repositories { mavenCentral() }

ext { set('springCloudVersion', "2023.0.5") }

dependencies {
    /* 공통 의존성 */
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // Spring Cloud
    implementation 'org.springframework.cloud:spring-cloud-starter-gateway-mvc'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Asciidoctor extension for REST Docs
    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // gRPC
    implementation 'net.devh:grpc-client-spring-boot-starter:3.1.0.RELEASE'
    implementation 'com.google.protobuf:protobuf-java:3.25.2'
    implementation 'io.grpc:grpc-stub:1.63.0'
    implementation 'io.grpc:grpc-protobuf:1.63.0'

    // Java annotation for protobuf
    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'

    // Monitoring
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // Common
    implementation files('../common/build/libs/common-0.0.1-SNAPSHOT.jar')

    // Common 모듈의 proto 파일 사용
    compileProtoPath project(':common')

    /* 환경별 조건부 의존성 */
    if (!isProd) {
        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
        implementation 'org.springframework.cloud:spring-cloud-starter-config'
        implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
    } else {
        implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-client-config'
    }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

/* Common 모듈 빌드 의존성 */
tasks.withType(JavaCompile) {
    dependsOn ':common:jar'
}
tasks.withType(com.google.protobuf.gradle.ProtobufExtract) {
    dependsOn ':common:jar'
}

/* 중복 파일 처리 전략 */
tasks.withType(Copy) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

sourceSets {
    main {
        java {
            srcDirs 'build/generated/source/proto/main/grpc'
            srcDirs 'build/generated/source/proto/main/java'
        }
    }
}

protobuf {
    protoc { artifact = 'com.google.protobuf:protoc:3.25.2' }
    plugins { grpc { artifact = 'io.grpc:protoc-gen-grpc-java:1.63.0' } }
    generateProtoTasks {
        all().each { task -> task.plugins { grpc {} } }
    }
    extractIncludeTestProto { enabled = false }
    generateTestProto { enabled = false }
}

/* === REST Docs === */
ext { snippetsDir = file('build/generated-snippets') }

// test 태스크가 REST Docs snippet을 생성하도록 설정
tasks.named('test') {
    useJUnitPlatform()
    outputs.dir snippetsDir
    systemProperty 'org.springframework.restdocs.outputDir', snippetsDir
}

// REST Docs 테스트만 실행하는 별도 태스크
tasks.register('restDocsTest', Test) {
    dependsOn tasks.named('compileTestJava')
    useJUnitPlatform()
    outputs.dir snippetsDir
    systemProperty 'org.springframework.restdocs.outputDir', snippetsDir

    // RestDocsTest로 끝나는 테스트만 실행
    include '**/*RestDocsTest.class'
}

// asciidoctor는 test와 restDocsTest 후에 실행
tasks.named('asciidoctor', org.asciidoctor.gradle.jvm.AsciidoctorTask).configure {
    dependsOn tasks.named('test')
    dependsOn tasks.named('restDocsTest')
    configurations 'asciidoctorExt'
    inputs.dir snippetsDir
    sourceDir file('src/docs/asciidoc')
    outputDir = file("$buildDir/docs/asciidoc")
    attributes 'snippets': snippetsDir
}

// 없으면 추가
tasks.register('syncRestDocsToStatic', Sync) {
    dependsOn tasks.named('asciidoctor')
    from("$buildDir/docs/asciidoc")
    into("$projectDir/src/main/resources/static/back-docs")

    // Gradle 캐싱을 무시하고 항상 실행
    outputs.upToDateWhen { false }
}

bootJar {
    // asciidoctor의 출력을 사용하므로 의존성 필요
    dependsOn tasks.named('asciidoctor')

    archiveBaseName.set("${project.name}")
    archiveVersion.set("${version}")
    archiveClassifier.set(profile)

    // JAR에 REST Docs 포함 (빌드 디렉토리에서)
    from("$buildDir/docs/asciidoc") { into 'static/back-docs' }
}

// build 태스크가 REST Docs를 항상 생성하도록 설정
tasks.named('build') {
    dependsOn tasks.named('syncRestDocsToStatic')
}